--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "labnotes.git"
+    "url": "https://github.com/kaunartist/labnotes.git"
   },
   "author": "jesse-kaunisviita",
   "license": "MIT",
